# nomad-oasis-test-plugin

./: pyproject.toml
src/nomad_oasis_test_plugin/schema_packages/: plugin.py
